Introduction section finished but left numbers to correct

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,56 @@
             </div>
           </div>
         </section>
+        <section class="introduction">
+          <h2>Как оставить отзыв</h2>
+          <div class="introduction__row">
+            <div class="introduction__item">
+              <div class="introduction__icons">
+                <div class="introduction__number">1</div>
+                <div class="introduction__icon">
+                  <img src="icons/instructions/1.png" alt="icon" />
+                </div>
+              </div>
+              <div class="introduction__desc">
+                Авторизуйтесь и перейдите в карточку купленного товара
+              </div>
+            </div>
+            <div class="introduction__item">
+              <div class="introduction__icons">
+                <div class="introduction__number">2</div>
+                <div class="introduction__icon">
+                  <img src="icons/instructions/2.png" alt="icon" />
+                </div>
+              </div>
+              <div class="introduction__desc">Кликните на вкладку «Отзывы»</div>
+            </div>
+            <div class="introduction__item">
+              <div class="introduction__icons">
+                <div class="introduction__number">3</div>
+                <div class="introduction__icon">
+                  <img src="icons/instructions/3.png" alt="icon" />
+                </div>
+              </div>
+              <div class="introduction__desc">
+                Нажмите «Добавить отзыв» и поделитесь мнением
+              </div>
+            </div>
+            <div class="introduction__item">
+              <div class="introduction__icons">
+                <div class="introduction__number">4</div>
+                <div class="introduction__icon">
+                  <img src="icons/instructions/4.png" alt="icon" />
+                </div>
+              </div>
+              <div class="introduction__desc">
+                Через 7 рабочих дней после публикации мы начислим 30 ₽
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="action"></section>
+        <section class="why"></section>
+        <section class="questions"></section>
       </div>
     </div>
 
