Action section finished

--- a/src/index.html
+++ b/src/index.html
@@ -81,12 +81,18 @@
                 </div>
               </div>
               <div class="introduction__desc">
-                Через 7 рабочих дней после публикации мы начислим 30 ₽
+                Через 7 рабочих дней после публикации мы начислим <br />30 ₽
               </div>
             </div>
           </div>
         </section>
-        <section class="action"></section>
+        <section class="action">
+          <div class="action__row">
+            <h2>Мы дорожим вашим мнением и ждём его!</h2>
+
+            <button class="action__button">Оставить отзыв</button>
+          </div>
+        </section>
         <section class="why"></section>
         <section class="questions"></section>
       </div>
