Why section finished

--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,35 @@
             <button class="action__button">Оставить отзыв</button>
           </div>
         </section>
-        <section class="why"></section>
+        <section class="why">
+          <h2>Зачем нужны отзывы</h2>
+          <div class="why__row">
+            <div class="why__item">
+              <img src="icons/why/like.png" alt="img" />
+              <div class="why__subheader">Помощь другим</div>
+              <div class="why__text">
+                Ваш отзыв может стать полезным ориентиром для тех, кто ищет
+                качественный продукт или сервис
+              </div>
+            </div>
+            <div class="why__item">
+              <img src="icons/why/star.png" alt="img" />
+              <div class="why__subheader">Улучшение качества</div>
+              <div class="why__text">
+                Конструктивная критика показывает проблемы, которые мы сможем
+                решить, а благодарность стимулирует работать безупречно.
+              </div>
+            </div>
+            <div class="why__item">
+              <img src="icons/why/smile_opros.png" alt="img" />
+              <div class="why__subheader">Создание доверия</div>
+              <div class="why__text">
+                Оставляя отзыв, вы становитесь частью нашей дружной команды,
+                ведь ваше мнение помогает нам расти.
+              </div>
+            </div>
+          </div>
+        </section>
         <section class="questions"></section>
       </div>
     </div>
