Section FAQ almost finished

--- a/src/index.html
+++ b/src/index.html
@@ -122,7 +122,124 @@
             </div>
           </div>
         </section>
-        <section class="questions"></section>
+        <section class="faq">
+          <h2>Вопросы и ответы</h2>
+          <div class="faq__column">
+            <details open class="faq__item">
+              <summary class="faq__question">
+                Кто может оставлять отзывы?
+                <img
+                  class="arrow-down"
+                  src="icons/faq/arrow-down.png"
+                  alt="img"
+                />
+                <img class=" arrow-up__active" src="icons/faq/arrow-up.png" alt="img" />
+              </summary>
+              <p class="faq__answer">
+                Оставлять отзывы могут только зарегистрированные пользователи.
+              </p>
+            </details>
+            <details open class="faq__item">
+              <summary class="faq__question">
+                Когда будет опубликован мой отзыв?
+                 <img
+                  class="arrow-down"
+                  src="icons/faq/arrow-down.png"
+                  alt="img"
+                />
+                <img class=" arrow-up__active" src="icons/faq/arrow-up.png" alt="img" />
+              </summary>
+              <p class="faq__answer">
+                Отзыв будет опубликован после модерации. Срок проверки и
+                публикации отзыва — до 7 рабочих дней. Если для проверки
+                понадобится больше времени, мы свяжемся с вами дополнительно.
+              </p>
+            </details>
+            <details open class="faq__item">
+              <summary class="faq__question">
+                Какие мои данные будут опубликованы?
+                 <img
+                  class="arrow-down"
+                  src="icons/faq/arrow-down.png"
+                  alt="img"
+                />
+                <img class=" arrow-up__active" src="icons/faq/arrow-up.png" alt="img" />
+              </summary>
+              <p class="faq__answer">
+                Рядом с отзывом укажем только ваше имя либо «Аноним», если
+                отметите пункт «Не публиковать мои данные на сайте». Если вы
+                представляете юридическое лицо, появится название организации и
+                имя автора отзыва либо «Аноним», если отметите пункт «Не
+                публиковать мои данные на сайте».
+              </p>
+            </details>
+            <details open class="faq__item">
+              <summary class="faq__question">
+                Почему я не вижу свой отзыв?
+                 <img
+                  class="arrow-down"
+                  src="icons/faq/arrow-down.png"
+                  alt="img"
+                />
+                <img class=" arrow-up__active" src="icons/faq/arrow-up.png" alt="img" />
+              </summary>
+              <p class="faq__answer">
+                Все отзывы проходят модерацию в течение 7 рабочих дней. Отзыв не
+                пройдёт проверку и не будет опубликован на сайте в следующих
+                случаях: краткий, неинформативный комментарий, текст, состоящий
+                из вопросов, или содержащий ошибки, из-за которых нельзя понять
+                смысл, а также отзыв, написанный заглавными или латинскими
+                буквами; повторяет ранее опубликованные отзывы; обсуждается
+                цена, а не сам товар, есть ненормативная лексика, оскорбления,
+                ссылки на другие сайты или реклама, упоминание других брендов
+                или сравнение с ними; товар эксплуатировался неверно или не был
+                куплен в Комус.
+              </p>
+            </details>
+            <details open class="faq__item">
+              <summary class="faq__question">
+                До какого времени проходит акция?
+                 <img
+                  class="arrow-down"
+                  src="icons/faq/arrow-down.png"
+                  alt="img"
+                />
+                <img class=" arrow-up__active" src="icons/faq/arrow-up.png" alt="img" />
+              </summary>
+              <p class="faq__answer">
+                Акция заканчивается 31 декабря 2024 года. Однако, организатор
+                оставляет за собой право изменения сроков и условий.
+              </p>
+            </details>
+            <details open class="faq__item">
+              <summary class="faq__question">
+                Вы начислите 30 рублей за каждый отзыв?
+                 <img
+                  class="arrow-down"
+                  src="icons/faq/arrow-down.png"
+                  alt="img"
+                />
+                <img class=" arrow-up__active" src="icons/faq/arrow-up.png" alt="img" />
+              </summary>
+              <p class="faq__answer">
+                Да, за каждый прошедший модерацию отзыв о приобретенном у нас
+                товаре вы получите вознаграждение — 30 рублей на счёт вашего
+                номера телефона.
+              </p>
+            </details>
+          </div>
+          <!-- добавьте больше вопросов и ответов по аналогии -->
+        </section>
+        <!-- <section class="faq">
+          <h2>Вопросы и ответы</h2>
+        </section> -->
+        <section class="action">
+          <div class="action__row">
+            <h2>Мы дорожим вашим мнением и ждём его!</h2>
+
+            <button class="action__button">Оставить отзыв</button>
+          </div>
+        </section>
       </div>
     </div>
 
