Introduction and Action sections responsive almost done

--- a/src/index.html
+++ b/src/index.html
@@ -133,7 +133,11 @@
                   src="icons/faq/arrow-down.png"
                   alt="img"
                 />
-                <img class=" arrow-up__active" src="icons/faq/arrow-up.png" alt="img" />
+                <img
+                  class="arrow-up__active"
+                  src="icons/faq/arrow-up.png"
+                  alt="img"
+                />
               </summary>
               <p class="faq__answer">
                 Оставлять отзывы могут только зарегистрированные пользователи.
@@ -142,12 +146,16 @@
             <details open class="faq__item">
               <summary class="faq__question">
                 Когда будет опубликован мой отзыв?
-                 <img
+                <img
                   class="arrow-down"
                   src="icons/faq/arrow-down.png"
                   alt="img"
                 />
-                <img class=" arrow-up__active" src="icons/faq/arrow-up.png" alt="img" />
+                <img
+                  class="arrow-up__active"
+                  src="icons/faq/arrow-up.png"
+                  alt="img"
+                />
               </summary>
               <p class="faq__answer">
                 Отзыв будет опубликован после модерации. Срок проверки и
@@ -158,12 +166,16 @@
             <details open class="faq__item">
               <summary class="faq__question">
                 Какие мои данные будут опубликованы?
-                 <img
+                <img
                   class="arrow-down"
                   src="icons/faq/arrow-down.png"
                   alt="img"
                 />
-                <img class=" arrow-up__active" src="icons/faq/arrow-up.png" alt="img" />
+                <img
+                  class="arrow-up__active"
+                  src="icons/faq/arrow-up.png"
+                  alt="img"
+                />
               </summary>
               <p class="faq__answer">
                 Рядом с отзывом укажем только ваше имя либо «Аноним», если
@@ -176,12 +188,16 @@
             <details open class="faq__item">
               <summary class="faq__question">
                 Почему я не вижу свой отзыв?
-                 <img
+                <img
                   class="arrow-down"
                   src="icons/faq/arrow-down.png"
                   alt="img"
                 />
-                <img class=" arrow-up__active" src="icons/faq/arrow-up.png" alt="img" />
+                <img
+                  class="arrow-up__active"
+                  src="icons/faq/arrow-up.png"
+                  alt="img"
+                />
               </summary>
               <p class="faq__answer">
                 Все отзывы проходят модерацию в течение 7 рабочих дней. Отзыв не
@@ -199,12 +215,16 @@
             <details open class="faq__item">
               <summary class="faq__question">
                 До какого времени проходит акция?
-                 <img
+                <img
                   class="arrow-down"
                   src="icons/faq/arrow-down.png"
                   alt="img"
                 />
-                <img class=" arrow-up__active" src="icons/faq/arrow-up.png" alt="img" />
+                <img
+                  class="arrow-up__active"
+                  src="icons/faq/arrow-up.png"
+                  alt="img"
+                />
               </summary>
               <p class="faq__answer">
                 Акция заканчивается 31 декабря 2024 года. Однако, организатор
@@ -214,12 +234,16 @@
             <details open class="faq__item">
               <summary class="faq__question">
                 Вы начислите 30 рублей за каждый отзыв?
-                 <img
+                <img
                   class="arrow-down"
                   src="icons/faq/arrow-down.png"
                   alt="img"
                 />
-                <img class=" arrow-up__active" src="icons/faq/arrow-up.png" alt="img" />
+                <img
+                  class="arrow-up__active"
+                  src="icons/faq/arrow-up.png"
+                  alt="img"
+                />
               </summary>
               <p class="faq__answer">
                 Да, за каждый прошедший модерацию отзыв о приобретенном у нас
